@@ -1,5 +1,4 @@
-# modified 2015-07-13 by J. Fox
-# modified 2015-08-31 S. Weisberg, added optimHess
+# last modified 2015-09-04 by J. Fox
 
 importFrom(MASS, cov.trob, polr, rlm)
 importFrom(nnet, multinom)
@@ -164,6 +163,7 @@ S3method(boxCox, lm)
 S3method(boxCox, formula) 
 S3method(Anova, aov)
 S3method(Anova, coxph)
+S3method(Anova, coxme)
 S3method(Anova, default)
 S3method(Anova, glm)
 S3method(Anova, lm)
