@@ -14,6 +14,7 @@
 # 2014-11-02: termsToMf fixed, Sandy
 # 2015-01-13: fixed model.matrix.lme() to work with model with formula as object. John
 # 2015-01-27: .carEnv now lives in the global environment. John
+# 2015-09-04: added model.matrix.coxme() and alias.coxme(). John
 
 #if (getRversion() >= "2.15.1") globalVariables(c(".boot.sample", ".boot.indices"))
 
@@ -372,4 +373,17 @@ package.installed <- function(package){
   package <- as.character(substitute(package))
   result <- try(find.package(package), silent=TRUE)
   !class(result) ==  "try-error"
+}
+
+# support for coxme objects
+
+model.matrix.coxme <- function(object, ...){
+    if (!requireNamespace("survival")) stop("survival package is missing")
+    class(object) <- "coxph"
+    model.matrix(object)
+}
+
+alias.coxme <- function(model){
+    if(any(which <- is.na(coef(model)))) return(list(Complete=which))
+    else list()
 }
